--- a/2_react_gugu/index.html
+++ b/2_react_gugu/index.html
@@ -59,6 +59,7 @@
                     console.log('rendering!');
                     return (
                         // React.Fragment 사용 시 쓸모없는 div 영역을 쓰지않아도 됨
+                        // html 속성에서 class -> className, for -> htmlFor
                         <React.Fragment>
                             <div>
                                 {this.state.first} x {this.state.second}?
